@@ -2,6 +2,7 @@
     2.14.3: In progress...
 
      FIXED: Lock button in Audio options dialog is always shaded on MacOS.
+     FIXED: Restored Airspy HF and BladeRF support in MacOS builds.
 
 
     2.14.2: Released December 3, 2020
